
Added -f and -w options to ra_tiff to create IEEE float and 16-bit/primary
TIFF output, respectively.  These formats are also understood on reverse
conversion.  (16-bit/primary has been understood for some time, but not
IEEE float.)

Added -N option to rad to start multiple rendering processes in
parallel.

Fixed bug where mesh instances were not being freed, so subsequent calls
in programs like ranimate would refer to bogus data.

Added support in normtiff for floating-point and 16-bit/sample TIFF input
files.

Changed marksources() routine (src/rt/source.c) to check all
primitives in the modifier chain for emitting types, not only
the first.  This permits sources to be described with intervening
modifiers before the light/illum/glow primitive and allows aliases
as well.

Fixed bug in xform where it was neglecting to add transform arguments
to new mesh primitive.

Added -dF and -dD options to pvalue for byte-swapped floats and
doubles, respectively.

Changed meta2tga to output correct colors.

Changed local coordinate index from 32-bits to 16-bits, which requires
that Radiance mesh files be recompiled.  (Later decided against this
change, as it caused problems with some models.)

Changed integer tone-mapping routines to better deal with images
containing large, constant regions.

Improved interaction with rholo -o ogl driver under OS X, which was
returning bad values from the depth buffer.

Minor bug fix in ranimove where it was restarting processes when it
didn't need to.

Increased accuracy of default ambient parameters in rpict, rview, and
rtrace.  In rad program, doubled -ar value, -ad value, and -as value,
and decreased -aa value a bit.  Also adjusted -lr upwards and -lw
downwards.  I should have done these things long ago, as processors
have been getting faster and faster over the years.

Fixed bug discovered by Marcus Jacobs where oconv was dumping core
when it was given too many modifiers.

Fixed problem with rpict where it was drawing illum sources badly